fix bug for toggleSwitch letters overlapping modals

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,58 +2,32 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 28px;
-  /* max-width: 100%;
-  /* display: flex; */
-  /* flex-wrap: nowrap;
-  justify-content: space-between;  */
-  /* align-items: center; */
-  /* font-size: 20px;
-  line-height: 24px;
-  margin-bottom: 28px; */
 }
 
 /* Left Section of styles */
 .header__left-side {
   display: flex;
   align-items: center;
-  /* font-family: Cabinet Grotesk; */
   font-weight: 700;
   font-style: Bold;
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0%;
-
-  /* display: flex;
-  gap: 24px; */
-  /* align-items: flex-end; */
 }
 
 .header a {
   text-decoration: none;
   color: black;
-  /* display: inline-block; */
-  /* text-decoration: none;
-  color: black;
-  width: 89px;
-  height: 40px; */
-  /* align-self: center; */
 }
 
 .header__image {
   margin-right: 24px;
   width: 89px;
   height: 40px;
-  /* align-self: center;
-  width: 89px;
-  height: 40px; */
 }
 
 .header__date-location {
   margin: 0;
-  /* margin: 0;
-  text-wrap: nowrap;
-  font-size: 20px;
-  line-height: 24px; */
 }
 
 /* Right Section of styles */
@@ -65,30 +39,20 @@
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0%;
-  /* display: flex;
-  flex-wrap: nowrap;
-  overflow: hidden; */
-  /* align-items: flex-end; */
-  /* gap: 20px; */
 }
 
 .header__button {
   margin: 0;
   margin-left: 20px;
-  /* margin: 0;
   cursor: pointer;
-  font-size: 20px;
-  line-height: 24px; */
 }
 
 /* Transport the below styles to its own user.css stylesheet in future */
 .user {
   display: flex;
   align-items: center;
-  /* align-items: flex-end; */
   gap: 12px;
   margin-left: 20px;
-  /* font-family: Cabinet Grotesk; */
   font-weight: 700;
   font-style: Bold;
   font-size: 20px;
@@ -98,11 +62,6 @@
 
 .user__name {
   margin: 0;
-  /* margin: 0;
-  text-align: center;
-  text-wrap: nowrap;
-  font-size: 20px;
-  line-height: 24px; */
 }
 
 .user__image {
