--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -5,7 +5,7 @@
   max-width: 496px;
 }
 
-.form-modal__close-btn {
+.modal__close-btn.form-modal__close-btn {
   background-image: url("src/images/close-btn-grey.svg");
   width: 20px;
   height: 20px;
